updated show function to include reviews and such

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -10,13 +10,28 @@
 
 <body>
   <main>
-    <h1><span>My Movie List</span></h1>
+    <h1><span>Ragnarock Sucks</span></h1>
+    <h2>The most official best website to read reviews and rate movies</h2>
     <div id="select-movie"></div>
     <form id="movie-form" class="container-fluid">
     <select id="movie">
     <option value="" disabled selected>Choose your Movie</option>
     </select>
+    <input type='submit' value= "see the flick">
    </form>
+   <br>
+   <p>Not seeing your film? Add a new one to review:</p>
+    <form id="new-movie">
+      <input type="text" name="movie" placeholder= "Enter Movie Title">
+      <br>
+      <br>
+      <input type="text" name= "image" plasholder= "Movie Image URL">
+      <br>
+      <br>
+
+      <input type="submit" value= "make it so">
+
+    </form>
    <div id="movie-profile"></div>
   </main>
 </body>
