functional with updates to dropdown and adding new movie

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -18,7 +18,6 @@
     <select id="movie">
     <option value="" disabled selected>Choose your Movie</option>
     </select>
-    <input type='submit' value= "see the flick">
    </form>
    <br>
    <div class="new-movie-div" id= "new-form-div">Not seeing your film? Add a new one to review:
@@ -26,7 +25,7 @@
       <input type="text" name="movie" placeholder= "Enter Movie Title">
       <br>
       <br>
-      <input type="text" name= "image" plasholder= "Movie Image URL">
+      <input type="text" name= "image" placeholder= "Movie Image URL">
       <br>
       <br>
 
@@ -34,7 +33,7 @@
     </div>
 
     </form>
-   <div id="movie-profile"></div>
+   <div id="movie-profile" class= "movie-box"></div>
   </main>
 </body>
 
