--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,16 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="utf-8">
+  <meta charset="utf-8"name="viewport" content="width=device-width, initial-scale=1">
   <title>Title</title>
   <script defer src="src/index.js"></script>
-  <link rel="stylesheet" href="src/style.css">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
   <meta name="description" content="The HTML5 Herald">
   <meta name="author" content="SitePoint">
 </head>
 
 <body>
   <main>
+    <div class='container-fluid' id= 'main-div'></div>
     <h1><span>Ragnarock Sucks</span></h1>
     <h2>The most official best website to read reviews and write your own!</h2>
     <div id="select-movie"></div>
@@ -20,7 +21,7 @@
     </select>
    </form>
    <br>
-   <div class="new-movie-div" id= "new-form-div">Not seeing your film? Add a new one to review:
+   <div class="card" id= "new-form-div">Not seeing your film? Add a new one to review:
     <form id="new-movie">
       <input type="text" name="movie" placeholder= "Enter Movie Title">
       <br>
@@ -34,6 +35,7 @@
 
     </form>
    <div id="movie-profile" class= "movie-box"></div>
+   </div>
   </main>
 </body>
 
