everything functional, no real styling.

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -12,8 +12,8 @@
 <body>
   <main>
     <div class='container-fluid' id= 'main-div'></div>
-    <h1><span>Ragnarock Sucks</span></h1>
-    <h2>The most official best website to read reviews and write your own!</h2>
+    <h1><span >Ragnarok Sucks</span></h1>
+    <h2>The best site for reading and writing movie reviews</h2>
     <div id="select-movie"></div>
     <form id="movie-form" class="formative">
     <select id="movie">
