updated some sweet CSS

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8"name="viewport" content="width=device-width, initial-scale=1">
   <title>Title</title>
   <script defer src="src/index.js"></script>
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
+  <link rel= "stylesheet" href= "src/style.css">
   <meta name="description" content="The HTML5 Herald">
   <meta name="author" content="SitePoint">
 </head>
@@ -12,7 +12,9 @@
 <body>
   <main>
     <div class='container-fluid' id= 'main-div'></div>
+    
     <h1><span >Ragnarok Sucks</span></h1>
+   
     <h2>The best site for reading and writing movie reviews</h2>
     <div id="select-movie"></div>
     <form id="movie-form" class="formative">
